# misha-party

./: Cargo.toml  Rocket.toml
.cargo/: config.toml
client/: Cargo.toml  Makefile.toml  Trunk.toml  index.html
client/src/: main.rs
server/: Cargo.toml  Makefile.toml
server/.cargo/: config.toml
server/src/: main.rs
server/src/args/: mod.rs
server/src/debugging/: mod.rs
server/static/: index.html  reset.css
src/: main.rs
src/args/: mod.rs
src/catchers/: mod.rs
src/debugging/: mod.rs
static/: client-b0660807dfebbd5.js  client-b0660807dfebbd5_bg.wasm  index.html  script.js  style.css  yew.js  yew.wasm
static_gen/: index.html  yew.js  yew.wasm
