[package]
name = "misha-party"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", version = "=0.5.0-rc.3", features = ["json"] }
rocket_ws = { git = "https://github.com/SergioBenitez/Rocket.git", package = "rocket_ws", version = "=0.1.0-rc.3" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
str0m = "0.2.0"
systemstat = "0.2.3"