[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-logger = "0.2.0"
web-sys = "0.3.64"
yew = { version = "0.21.0", features = ["csr"] }
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
async-std = { version = "1.12.0", features = [] }
