[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
log = "0.4.20"
serde = { version = "1.0.190", features = ["derive"] }
wasm-bindgen-futures = "0.4.38"
js-sys = "0.3.65"
wasm-bindgen = "0.2.88"
web-sys = { version = "0.3.65", features = [
    "MediaRecorder",
    "MediaStream",
    "AudioNode",
    "MediaDevices",
    "Navigator",
    "AudioContext",
    "MediaStreamConstraints",
    "BlobEvent",
    "AudioBuffer",
    "HtmlAudioElement",
] }
